feat: add Dockerfile and env var support, fix dashboard search and update e2e tests